--- a/README.ipynb
+++ b/README.ipynb
@@ -214,8 +214,7 @@
    "source": [
     "## 7.3 Detailed AWS implementation and depoloyment\n",
     "```\n",
-    "Check the content of [README_AWS.md](https://github.com/aashalabi/mlzoom_capstone2/blob/main/README_AWS.md)\n",
-    "\n",
+    "Check the content of [README_AWS.md](README_AWS.md)\n",
     "```"
    ]
   },
