--- a/README.ipynb
+++ b/README.ipynb
@@ -213,9 +213,9 @@
    "metadata": {},
    "source": [
     "## 7.3 Detailed AWS implementation and depoloyment\n",
-    "```\n",
+    "```markdown\n",
     "Check the content of [README_AWS.md](README_AWS.md)\n",
-    "```\n"
+    "\n"
    ]
   },
   {
