--- a/README.ipynb
+++ b/README.ipynb
@@ -213,8 +213,8 @@
    "metadata": {},
    "source": [
     "## 7.3 Detailed AWS implementation and depoloyment\n",
-    "```markdown\n",
-    "Check the content of [README_AWS.md](README_AWS.md)\n",
+    "```\n",
+    "Check the content of [README_AWS.md]:(README_AWS.md)\n",
     "\n"
    ]
   },
