--- a/README.ipynb
+++ b/README.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.1 Data Features\n",
+    "### 3.1 Data Features\n",
     "```\n",
     "All data fields are described in data\\Phishing Websites Features.pdf\n",
     "All features are encoded as follows:\n",
