--- a/README.ipynb
+++ b/README.ipynb
@@ -160,25 +160,8 @@
     "    cd src\n",
     "    docker build --no-cache -t site_spam_predict:1.0 .\n",
     "    docker run -d -p 9696:9696 --name site_spam_predict site_spam_predict:1.0\n",
-    "    python test_service.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Build and run through Docker\n",
-    "```\n",
-    "    pipenv --python 3.11\n",
-    "    pipenv install -q scipy\n",
-    "    pipenv install pandas numpy\n",
-    "    pipenv install seaborn scikit-learn waitress \n",
-    "    pipenv install flask\n",
-    "    \n",
-    "    cd src\n",
-    "    docker build --no-cache -t site_spam_predict:1.0 .\n",
-    "    docker run -d -p 9696:9696 --name site_spam_predict site_spam_predict:1.0\n",
-    "    python test_service.py\n"
+    "    python test_service.py\n",
+    "```"
    ]
   },
   {
