--- a/README.ipynb
+++ b/README.ipynb
@@ -149,7 +149,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Build and run through Docker\n",
+    "## 6. Build and run through Docker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```\n",
     "    pipenv --python 3.11\n",
     "    pipenv install -q scipy\n",
