--- a/README.ipynb
+++ b/README.ipynb
@@ -105,7 +105,8 @@
     "|----------------|-----------|\n",
     "| Legitimate     | 1         |\n",
     "| Phishing       | -1        |\n",
-    "\n"
+    "\n",
+    "```"
    ]
   },
   {
@@ -142,7 +143,8 @@
     "    5- Run predict test, open new cmd window , activate the env\n",
     "       conda activate ml-zoomcamp\n",
     "       cd src\n",
-    "       python test_service.py\n"
+    "       python test_service.py\n",
+    "```"
    ]
   },
   {
