--- a/README_old.ipynb
+++ b/README_old.ipynb
@@ -74,9 +74,7 @@
     "pip install scikit-learn\n",
     "pip install waitress\n",
     "pip install pipenv\n",
-    "\n",
-    "\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -84,20 +82,17 @@
    "metadata": {},
    "source": [
     "## 3. Data\n",
-    "```\n",
-    "Data is download from the URL https://archive.ics.uci.edu/dataset/327/phishing+websites\n",
     "\n",
-    "```"
+    "    Data is download from the URL [archive.ics.uci.ed](https://archive.ics.uci.edu/dataset/327/phishing+websites)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Data Features\n",
+    "### 3.1 Data Features\n",
     "```\n",
     "All data fields are described in data\\Phishing Websites Features.pdf\n",
-    "\n",
     "All features are encoded as follows:\n",
     "| **Category**   | **Value** |\n",
     "|----------------|-----------|\n",
@@ -120,16 +115,15 @@
    "source": [
     "## 4. Notebooks and included files\n",
     "```\n",
-    "ml_project.ipynb :  contains \n",
-    "                        - Data preparation and data cleaning\n",
-    "                        - EDA, feature importance analysis\n",
-    "                        - Model selection process and parameter tuning\n",
-    "train.py: selected model traianing and saving to file\n",
-    "predecit.py: simple load model and predict\n",
-    "app.py: flask app\n",
-    "test_service: test the flash app\n",
-    "Docker file: to create docker image\n",
-    "```"
+    "    ml_project.ipynb :  contains <br>\n",
+    "                            - Data preparation and data cleaning\n",
+    "                            - EDA, feature importance analysis                        \n",
+    "                            - Model selection process and parameter tuning                        \n",
+    "    train.py: selected model traianing and saving to file\n",
+    "    predecit.py: simple load model and predict\n",
+    "    app.py: flask app\n",
+    "    test_service: test the flash app\n",
+    "    Docker file: to create docker image"
    ]
   },
   {
@@ -144,9 +138,11 @@
     "3- Clone the repo\n",
     "   https://github.com/aashalabi/ml-zoomcamp-project.git\n",
     "4- run flask backend service\n",
-    "    waitress-serve --port=9696 app:app\n",
+    "   cd src\n",
+    "   waitress-serve --port=9696 app:app\n",
     "5- Run predict test, open new cmd window , activate the env\n",
     "   conda activate ml-zoomcamp\n",
+    "   cd src\n",
     "   python test_service.py\n",
     "```"
    ]
@@ -155,19 +151,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Build and run through Docker\n",
+    "## 6. Build and run through Docker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```\n",
-    "pipenv --python 3.11\n",
-    "pipenv install -q scipy\n",
-    "pipenv install pandas numpy\n",
-    "pipenv install seaborn scikit-learn waitress \n",
-    "pipenv install flask\n",
-    "\n",
-    "\n",
-    "docker build --no-cache -t site_spam_predict:1.0 .\n",
-    "docker run -d -p 9696:9696 --name site_spam_predict site_spam_predict:1.0\n",
-    "python test_service.py\n",
-    "\n",
+    "    pipenv --python 3.11\n",
+    "    pipenv install -q scipy\n",
+    "    pipenv install pandas numpy\n",
+    "    pipenv install seaborn scikit-learn waitress \n",
+    "    pipenv install flask\n",
+    "    \n",
+    "    cd src\n",
+    "    docker build --no-cache -t site_spam_predict:1.0 .\n",
+    "    docker run -d -p 9696:9696 --name site_spam_predict site_spam_predict:1.0\n",
+    "    python test_service.py\n",
     "```"
    ]
   },
@@ -196,19 +197,10 @@
    "metadata": {},
    "source": [
     "## 7.2 Convert binary model to protocol V4\n",
-    "```\n",
-    "It was suggested to used p4 or p5 protocol when saving the model.\n",
-    "Execute the following to conver the model to v4 protocol\n",
     "\n",
-    "python p4_bin_convert.py\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###"
+    "It was suggested to used p4 or p5 protocol when saving the model.<br>\n",
+    "Execute the following to conver the model to v4 protocol<br>\n",
+    "python p4_bin_convert.py\n"
    ]
   },
   {
@@ -216,10 +208,10 @@
    "metadata": {},
    "source": [
     "## 7.3 Detailed AWS implementation and depoloyment\n",
-    "```\n",
-    "Check the content of README_AWS.md\n",
     "\n",
-    "```"
+    "\n",
+    "Check the content of [README_AWS.md](./README_AWS.md)\n",
+    "\n"
    ]
   },
   {
@@ -230,7 +222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-zoomcamp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -248,5 +240,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
