--- a/README.ipynb
+++ b/README.ipynb
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Instructions on how to run the project\n",
+    "## 5. Instructions on how to run the project locally\n",
     "```\n",
     "1- create the env as in (2)\n",
     "2- activate the environment\n",
@@ -144,9 +144,11 @@
     "3- Clone the repo\n",
     "   https://github.com/aashalabi/ml-zoomcamp-project.git\n",
     "4- run flask backend service\n",
+    "    cd src\n",
     "    waitress-serve --port=9696 app:app\n",
     "5- Run predict test, open new cmd window , activate the env\n",
     "   conda activate ml-zoomcamp\n",
+    "   cd src\n",
     "   python test_service.py\n",
     "```"
    ]
@@ -163,7 +165,7 @@
     "pipenv install seaborn scikit-learn waitress \n",
     "pipenv install flask\n",
     "\n",
-    "\n",
+    "cd src\n",
     "docker build --no-cache -t site_spam_predict:1.0 .\n",
     "docker run -d -p 9696:9696 --name site_spam_predict site_spam_predict:1.0\n",
     "python test_service.py\n",
