--- a/README.ipynb
+++ b/README.ipynb
@@ -120,14 +120,22 @@
    "source": [
     "## 4. Notebooks and included files\n",
     "```\n",
-    "ml_project.ipynb :  contains \n",
+    "src:\n",
+    "    ml_project.ipynb :  contains \n",
     "                        - Data preparation and data cleaning\n",
     "                        - EDA, feature importance analysis\n",
     "                        - Model selection process and parameter tuning\n",
-    "train.py: selected model traianing and saving to file\n",
-    "predecit.py: simple load model and predict\n",
-    "app.py: flask app\n",
-    "test_service: test the flash app\n",
+    "    train.py: selected model traianing and saving to file\n",
+    "    predecit.py: simple load model and predict\n",
+    "    app.py: flask app\n",
+    "    test_service: test the flash app\n",
+    "data:\n",
+    "    data file (Training Dataset.arff)\n",
+    "    Phishing Websites Features.pdf, detailed data fields\n",
+    "AWS:\n",
+    "    AWS related implementation files\n",
+    "Modles:\n",
+    "    folder of final model    \n",
     "Docker file: to create docker image\n",
     "```"
    ]
@@ -165,9 +173,10 @@
     "pipenv install seaborn scikit-learn waitress \n",
     "pipenv install flask\n",
     "\n",
-    "cd src\n",
+    "\n",
     "docker build --no-cache -t site_spam_predict:1.0 .\n",
     "docker run -d -p 9696:9696 --name site_spam_predict site_spam_predict:1.0\n",
+    "cd src\n",
     "python test_service.py\n",
     "\n",
     "```"
@@ -222,6 +231,17 @@
     "Check the content of README_AWS.md\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.4 Test Lambda function locally\n",
+    "```\n",
+    "cd AWS\n",
+    "python test_lambda.py\n",
+    "```\n"
    ]
   },
   {
