--- a/README.ipynb
+++ b/README.ipynb
@@ -84,10 +84,10 @@
    "metadata": {},
    "source": [
     "## 3. Data\n",
-    "```\n",
+    "<p>\n",
     "Data is download from the URL https://archive.ics.uci.edu/dataset/327/phishing+websites\n",
     "\n",
-    "```"
+    "<p>"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "source": [
     "## 3.1 Data Features\n",
-    "```\n",
+    "<p>\n",
     "All data fields are described in data\\Phishing Websites Features.pdf\n",
     "\n",
     "All features are encoded as follows:\n",
@@ -111,7 +111,7 @@
     "| Legitimate     | 1         |\n",
     "| Phishing       | -1        |\n",
     "\n",
-    "```"
+    "<p>"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "source": [
     "## 4. Notebooks and included files\n",
-    "```\n",
+    "<p>\n",
     "src:\n",
     "    ml_project.ipynb :  contains \n",
     "                        - Data preparation and data cleaning\n",
@@ -137,7 +137,7 @@
     "Modles:\n",
     "    folder of final model    \n",
     "Docker file: to create docker image\n",
-    "```"
+    "<p>"
    ]
   },
   {
@@ -207,12 +207,18 @@
    "metadata": {},
    "source": [
     "## 7.2 Convert binary model to protocol V4\n",
-    "```\n",
+    "<p>\n",
     "It was suggested to used p4 or p5 protocol when saving the model.\n",
-    "Execute the following to conver the model to v4 protocol\n",
-    "\n",
+    "Execute the following to conver the model to v4 protocol\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
     "python p4_bin_convert.py\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -227,10 +233,10 @@
    "metadata": {},
    "source": [
     "## 7.3 Detailed AWS implementation and depoloyment\n",
-    "```\n",
-    "Check the content of README_AWS.md\n",
+    "<p>\n",
+    "Check the content of [README_AWS.md](README_AWS.md)\n",
     "\n",
-    "```"
+    "<p>"
    ]
   },
   {
