--- a/README.ipynb
+++ b/README.ipynb
@@ -45,7 +45,8 @@
     "Pop-up Forms:Fake login or payment forms embedded in legitimate-looking sites.  \n",
     "\n",
     "How Website Phishing Affects Online Trading  \n",
-    "Online trading platforms, such as stock brokerages, cryptocurrency exchanges, and e-commerce websites, are frequent targets of phishing attacks. The impact includes:\n",
+    "Online trading platforms, such as stock brokerages, cryptocurrency exchanges, and e-commerce websites, are frequent targets of phishing attacks.  \n",
+    "The impact includes:  \n",
     "1. Loss of Sensitive Information  \n",
     "2. Theft of Funds  \n",
     "3. Compromised Reputation  \n",
@@ -96,22 +97,22 @@
    "source": [
     "## 3.1 Data Features\n",
     "<p>\n",
-    "All data fields are described in data\\Phishing Websites Features.pdf\n",
+    "All data fields are described in data\\Phishing Websites Features.pdf  \n",
     "\n",
-    "All features are encoded as follows:\n",
+    "All features are encoded as follows:  \n",
     "| **Category**   | **Value** |\n",
     "|----------------|-----------|\n",
     "| Legitimate     | 1         |\n",
     "| Suspicious     | 0         |\n",
     "| Phishing       | -1        |\n",
     "\n",
-    "The results column is encoded as :\n",
+    "The results column is encoded as :  \n",
     "| **Category**   | **Value** |\n",
     "|----------------|-----------|\n",
     "| Legitimate     | 1         |\n",
     "| Phishing       | -1        |\n",
     "\n",
-    "<p>"
+    "</p>"
    ]
   },
   {
@@ -120,24 +121,24 @@
    "source": [
     "## 4. Notebooks and included files\n",
     "<p>\n",
-    "src:\n",
-    "    ml_project.ipynb :  contains \n",
-    "                        - Data preparation and data cleaning\n",
-    "                        - EDA, feature importance analysis\n",
-    "                        - Model selection process and parameter tuning\n",
-    "    train.py: selected model traianing and saving to file\n",
-    "    predecit.py: simple load model and predict\n",
-    "    app.py: flask app\n",
-    "    test_service: test the flash app\n",
-    "data:\n",
-    "    data file (Training Dataset.arff)\n",
-    "    Phishing Websites Features.pdf, detailed data fields\n",
-    "AWS:\n",
-    "    AWS related implementation files\n",
-    "Modles:\n",
-    "    folder of final model    \n",
-    "Docker file: to create docker image\n",
-    "<p>"
+    "src:  \n",
+    "    ml_project.ipynb :  contains   \n",
+    "                        - Data preparation and data cleaning  \n",
+    "                        - EDA, feature importance analysis  \n",
+    "                        - Model selection process and parameter tuning  \n",
+    "    train.py: selected model traianing and saving to file  \n",
+    "    predecit.py: simple load model and predict  \n",
+    "    app.py: flask app  \n",
+    "    test_service: test the flash app  \n",
+    "data:  \n",
+    "    data file (Training Dataset.arff)  \n",
+    "    Phishing Websites Features.pdf, detailed data fields  \n",
+    "AWS:  \n",
+    "    AWS related implementation files  \n",
+    "Modles:  \n",
+    "    folder of final model      \n",
+    "Docker file: to create docker image  \n",
+    "</p>"
    ]
   },
   {
@@ -208,8 +209,9 @@
    "source": [
     "## 7.2 Convert binary model to protocol V4\n",
     "<p>\n",
-    "It was suggested to used p4 or p5 protocol when saving the model.\n",
-    "Execute the following to conver the model to v4 protocol\n"
+    "It was suggested to used p4 or p5 protocol when saving the model.  \n",
+    "Execute the following to conver the model to v4 protocol  \n",
+    "</p>"
    ]
   },
   {
@@ -233,10 +235,9 @@
    "metadata": {},
    "source": [
     "## 7.3 Detailed AWS implementation and depoloyment\n",
-    "<p>\n",
-    "Check the content of [README_AWS.md](README_AWS.md)\n",
     "\n",
-    "<p>"
+    "Check the content of [README_AWS.md](README_AWS.md)\n",
+    "\n"
    ]
   },
   {
