--- a/README.ipynb
+++ b/README.ipynb
@@ -120,9 +120,9 @@
    "metadata": {},
    "source": [
     "## 4. Notebooks and included files\n",
-    "<p>\n",
+    "<pre>\n",
     "src:  \n",
-    "    ml_project.ipynb :  contains   \n",
+    "    ml_project.ipynb :  contains \n",
     "                        - Data preparation and data cleaning  \n",
     "                        - EDA, feature importance analysis  \n",
     "                        - Model selection process and parameter tuning  \n",
@@ -138,7 +138,7 @@
     "Modles:  \n",
     "    folder of final model      \n",
     "Docker file: to create docker image  \n",
-    "</p>"
+    "</pre>"
    ]
   },
   {
