--- a/README.ipynb
+++ b/README.ipynb
@@ -120,6 +120,7 @@
    "metadata": {},
    "source": [
     "## 4. Notebooks and included files\n",
+    "<p>\n",
     "<pre>\n",
     "src:  \n",
     "    ml_project.ipynb :  contains \n",
@@ -138,7 +139,8 @@
     "Modles:  \n",
     "    folder of final model      \n",
     "Docker file: to create docker image  \n",
-    "</pre>"
+    "</pre>\n",
+    "</p>"
    ]
   },
   {
