--- a/README.ipynb
+++ b/README.ipynb
@@ -96,10 +96,17 @@
    "metadata": {},
    "source": [
     "## 3.1 Data Features\n",
-    "<p>\n",
-    "All data fields are described in data\\Phishing Websites Features.pdf  \n",
     "\n",
+    "All data fields are described in [Phishing_Websites_Features](data\\Phishing_Websites_Features.pdf)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>\n",
     "All features are encoded as follows:  \n",
+    "\n",
     "| **Category**   | **Value** |\n",
     "|----------------|-----------|\n",
     "| Legitimate     | 1         |\n",
