Update AWS readme

--- a/README_AWS.ipynb
+++ b/README_AWS.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Local Development\n",
     "### Docker build\n",
-    "```\n",
+    "<p>\n",
     "We will test lambda function in development environment before porting to AWS\n",
     "Build docker image in local environment \n",
     "\n",
     "docker build -f Dockerfile_lambda -t spam-classifier-lambda:py311 .\n",
-    "```"
+    "</p>"
    ]
   },
   {
@@ -19,8 +19,9 @@
    "metadata": {},
    "source": [
     "### Run Docker Image\n",
-    "\n",
-    "docker run -d -p 9696:8080 --name spam-classifier-lambda spam-classifier-lambda:py311\n"
+    "```\n",
+    "docker run -d -p 9696:8080 --name spam-classifier-lambda spam-classifier-lambda:py311\n",
+    "```"
    ]
   },
   {
@@ -194,9 +195,9 @@
    "metadata": {},
    "source": [
     "### Create Lambda function\n",
-    "```\n",
+    "\n",
     "Use the image uri to create lambda function from a container\n",
-    "```\n",
+    "\n",
     "![repo_uri.png](attachment:repo_uri.png)"
    ]
   },
@@ -319,12 +320,13 @@
    "metadata": {},
    "source": [
     "###  Test public API\n",
-    "```\n",
+    "<p>\n",
     "open test_lambda_gateway.py\n",
-    "replace url with the <<invoke url>> from deploy api.\n",
-    "run:  python test_lambda_gateway.py\n",
     "\n",
-    "```"
+    "replace url with the <<invoke url>> from deploy api.\n",
+    "\n",
+    "run:  python test_lambda_gateway.py\n",
+    "</p>\n"
    ]
   },
   {
