Update AWS readme

--- a/README_AWS.ipynb
+++ b/README_AWS.ipynb
@@ -9,9 +9,17 @@
     "<p>\n",
     "We will test lambda function in development environment before porting to AWS\n",
     "Build docker image in local environment \n",
-    "\n",
+    "</p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "cd AWS\n",
     "docker build -f Dockerfile_lambda -t spam-classifier-lambda:py311 .\n",
-    "</p>"
+    "```"
    ]
   },
   {
@@ -43,28 +51,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"statusCode\": 200,\n",
-      "  \"headers\": {\n",
-      "    \"Content-Type\": \"application/json\",\n",
-      "    \"Access-Control-Allow-Origin\": \"*\"\n",
-      "  },\n",
-      "  \"body\": \"{\\\"Spam_probability\\\": 0.9996296296296296, \\\"Spam\\\": true}\"\n",
-      "}\n"
-     ]
-    }
-   ],
    "source": [
-    "#test docker and lmabda service\n",
-    "!python test_lambda_docker.py"
+    "<pre>\n",
+    "{\n",
+    "  \"statusCode\": 200,\n",
+    "  \"headers\": {\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "    \"Access-Control-Allow-Origin\": \"*\"\n",
+    "  },\n",
+    "  \"body\": \"{\\\"Spam_probability\\\": 0.9996296296296296, \\\"Spam\\\": true}\"\n",
+    "}\n",
+    "</pre>"
    ]
   },
   {
