Update AWS readme

--- a/README_AWS.ipynb
+++ b/README_AWS.ipynb
@@ -322,34 +322,35 @@
     "<p>\n",
     "open test_lambda_gateway.py\n",
     "\n",
-    "replace url with the <<invoke url>> from deploy api.\n",
+    "replace url with the invoke url from deploy api.\n",
     "\n",
     "run:  python test_lambda_gateway.py\n",
     "</p>\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"statusCode\": 200,\n",
-      "  \"headers\": {\n",
-      "    \"Content-Type\": \"application/json\",\n",
-      "    \"Access-Control-Allow-Origin\": \"*\"\n",
-      "  },\n",
-      "  \"body\": \"{\\\"Spam_probability\\\": 0.9996296296296296, \\\"Spam\\\": true}\"\n",
-      "}\n"
-     ]
-    }
-   ],
    "source": [
-    "!python test_lambda_gateway.py"
+    "```\n",
+    "python test_lambda_gateway.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "{\n",
+    "  \"statusCode\": 200,\n",
+    "  \"headers\": {\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "    \"Access-Control-Allow-Origin\": \"*\"\n",
+    "  },\n",
+    "  \"body\": \"{\\\"Spam_probability\\\": 0.9996296296296296, \\\"Spam\\\": true}\"\n",
+    "}\n",
+    "</pre>"
    ]
   },
   {
