--- a/README.ipynb
+++ b/README.ipynb
@@ -126,6 +126,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p>\n",
+    "\n",
+    "| **Feature**                       | **Description** |\n",
+    "|-----------------------------------|-------------|\n",
+    "| Having IP Address                 | Checks if the URL contains an IP address instead of a domain name. |\n",
+    "| URL Length                        | Measures the length of the URL. |\n",
+    "| Shortening Service                | Checks if the URL uses a URL shortening service (e.g., bit.ly, tinyurl). |\n",
+    "| Having '@' Symbol                 | Determines if the URL contains the '@' symbol, which can be used to trick users. |\n",
+    "| Double Slash Redirecting          | Assesses if the \"//\" appears in an unexpected place in the URL. |\n",
+    "| Prefix Suffix                     | Checks for a hyphen in the domain name, often used in phishing sites. |\n",
+    "| Having Sub Domain                 | Evaluates the number of subdomains in the URL. More subdomains may indicate phishing. |\n",
+    "| SSL Final State                   | Checks if the website uses a valid SSL certificate (e.g., HTTPS, trusted CA). |\n",
+    "| Domain Registration Length        | Measures the duration for which the domain is registered. Shorter durations may indicate phishing. |\n",
+    "| Favicon                           | Determines if the favicon is loaded from an external domain. |\n",
+    "| Port                              | Identifies if non-standard ports are used (e.g., 8080, 443). |\n",
+    "| HTTPS Token                       | Checks if 'https' appears within the domain name itself. |\n",
+    "| Request URL                       | Evaluates if website resources (images, scripts) are loaded from external domains. |\n",
+    "| URL of Anchor                     | Assesses whether anchor links point to different domains, which may indicate phishing. |\n",
+    "| Links in Meta, Script, and Link Tags | Checks for external links inside meta, script, and link tags. |\n",
+    "| Server Form Handler (SFH)         | Checks if form actions point to an external, potentially malicious domain. |\n",
+    "| Submitting to Email               | Determines if form submissions go directly to an email instead of a web server. |\n",
+    "| Abnormal URL                      | Checks if the URL does not match the expected website domain. |\n",
+    "| Website Forwarding                | Counts how many times the website redirects. Multiple redirects may indicate phishing. |\n",
+    "| Status Bar Customization          | Checks if the website modifies the browser’s status bar, often used for deception. |\n",
+    "| Disabling Right Click             | Determines if right-click functionality is disabled, which is common in phishing sites. |\n",
+    "| Using Pop-up Window               | Identifies the presence of pop-ups, which may be used for phishing attacks. |\n",
+    "| Iframe Redirection                | Checks if the website uses iframe tags, which can hide malicious content. |\n",
+    "| Age of Domain                     | Measures how long the domain has existed. New domains are more likely to be phishing sites. |\n",
+    "| DNS Record                        | Checks if a valid DNS record exists for the domain. |\n",
+    "| Web Traffic                       | Assesses the site's Alexa rank. Higher rank means more legitimate traffic. |\n",
+    "| Page Rank                         | Evaluates the website’s search engine page rank. |\n",
+    "| Google Index                      | Determines if the website is indexed by Google. |\n",
+    "| Number of Links Pointing to Page  | Counts how many external websites link to this page. |\n",
+    "| Statistical Report                | Checks if the domain appears in phishing or spam databases. |\n",
+    "\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Notebooks and included files\n",
     "<p>\n",
     "<pre>\n",
