--- a/README.ipynb
+++ b/README.ipynb
@@ -287,8 +287,7 @@
    "source": [
     "## 7.3 Detailed AWS implementation and depoloyment\n",
     "\n",
-    "Check the content of [README_AWS.md](README_AWS.md)\n",
-    "\n"
+    "Check the content of [README_AWS.md](README_AWS.md)\n"
    ]
   },
   {
